--- a/vignettes/iDOVE_vignette.Rmd
+++ b/vignettes/iDOVE_vignette.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "iDOVE - $\\text{\\underline{D}}$urability $\\text{\\underline{O}}$f $\\text{\\underline{V}}$accine $\\text{\\underline{E}}$fficacy Against SARS-CoV-2 $\\text{\\underline{I}}$nfection"
+title: "**iDOVE -- $\\text{\\underline{D}}$urability $\\text{\\underline{O}}$f $\\text{\\underline{V}}$accine $\\text{\\underline{E}}$fficacy Against SARS-CoV-2 $\\text{\\underline{I}}$nfection**"
 author: "Yu Gu, Shannon T. Holloway, and Dan-Yu Lin"
-date: June 17, 2021
+date: September 9, 2021
 output: rmarkdown::pdf_document
 vignette: >
   %\VignetteIndexEntry{iDOVE-vignette}
@@ -19,14 +19,15 @@ library(iDOVE, quietly=TRUE)
 
 ## Introduction
 
-iDOVE is an R package for assessing potentially time-varying vaccine efficacy (VE) 
-against SARS-CoV-2 infection under staggered enrollment and time-varying community transmission, 
-allowing crossover of placebo volunteers to the vaccine arm. 
-The infection time can be either interval- or right-censored, 
-the latter being a special case of the former with very frequent monitoring. 
-iDOVE implements both the method for interval-censored data proposed in Lin et al. (2021)
-and the standard Cox regression method for right-censored data. 
-The iDOVE function takes as input a rectangular data set with the following information:
+\textbf{iDOVE} is an R package for assessing potentially time-varying vaccine efficacy (VE) 
+against SARS-CoV-2 infection under staggered enrollment of participants and time-varying community transmission, 
+allowing crossover of placebo volunteers to the vaccine arm before the end of the study. 
+Infection is not directly observed, but is rather known to occur between two examinations.
+\textbf{iDOVE} implements the methodology of Lin et al. (2021) for estimating time-varying VE against such interval-censored events,
+representing the log hazard ratio for the vaccine effect by a piece-wise linear function of time since vaccination. 
+The special case of right-censored events is implemented by dove2() in the DOVE package. 
+
+\textbf{iDOVE} inputs a rectangular data set with the following information:
 
 \begin{itemize}
 \item \textbf{Entry time}: The time when the participant enters the trial.
@@ -35,48 +36,39 @@ The iDOVE function takes as input a rectangular data set with the following info
   
 \item \textbf{Right interval time}: The first examination time when the test is positive.
   
-\item \textbf{Vaccination time}: The time when vaccination takes place,
-with an arbitrary value that is greater than the last examination time 
-(e.g., the end time of the clinical trial) if the participant is not vaccinated
-during the trial.
+\item \textbf{Vaccination time}: The time when vaccination takes place.
   
 \item \textbf{Covariates}: Baseline covariates (e.g., priority group, age, sex, 
 ethnicity).
 \end{itemize}
 
-\noindent Note that an arbitrary number of baseline covariates can be included.
-All of the time variables are measured from the start of the trial and are 
+\noindent Of note, an arbitrary number of baseline covariates can be included,
+and all of the time variables are measured from the start of the trial and are 
 specified in units of whole days. 
 
 \vspace{.15in}
 
-The primary analysis tool of the package is \textit{idove()}, which accommodates both interval- and right-censored infection time data. The implementation uses linear splines to approximate the log hazard ratio with respect to vaccination and, thus, is capable of estimating either the constant or the  potentially waning vaccine efficacy. Specifically, in $K$-piece linear splines, the log hazard ratio at time $t$ is given by
-
-$$\eta(t) = \gamma_1t+\gamma_2(t-x_1)_+ + \gamma_3(t-x_2)_+ +\dots + \gamma_K(t-x_{K-1})_+,$$
-
-where $x_1, \dots, x_{K-1}$ are the $K-1$ pre-specified change points, $\gamma_1, \dots, \gamma_K$ are the $K$ spline parameters, and $t_+ = t$ if $t > 0$ and 0 otherwise. The first $K-1$ spline parameters are always estimated from the data, whereas $\gamma_K$ is either estimated or given by  $\gamma_K = -\sum_{k=1}^{K-1}\gamma_k$, depending on the assumption of vaccine efficacy after the last change point $x_{K-1}$.
-
-\vspace{.15in}
-
-Function \textit{idove()} returns the estimated hazard ratio for each baseline covariate, the
-estimated vaccine efficacy in reducing the attack rate (cumulative incidence),
-the estimated vaccine efficacy in reducing the hazard rate (instantaneous risk), and the
-estimated vaccine efficacy in reducing the attack rates over successive time periods.
+The primary analysis tool of the package is \textit{idove()}, which
+returns the estimated hazard ratio for each baseline covariate, the
+estimated VE in reducing the attack rate (cumulative incidence),
+the estimated VE in reducing the hazard rate (instantaneous risk), and the
+estimated VE in reducing the attack rates over successive time periods.
+The standard errors and 95\% confidence intervals are also provided.
 
 \vspace{.15in}
 
-In addition, the package includes three convenience functions
-\textit{intCens()}, which is used to wrap all the input time variables together 
-as the response required in the model statement of \textit{idove()};
+In addition, the package includes three convenience functions:
+\textit{intCens()}, which is used to wrap all of the input time variables together 
+and is part of the model statement of \textit{idove()};
 \textit{print()}, which displays the primary results of the analysis; and
-\textit{plot()}, which generates plots of the estimated vaccine efficacies. 
+\textit{plot()}, which generates plots of the estimated VE curves. 
 Finally, a simulated dataset is provided to illustrate the use of the software.
 
 ## Functions
 
 ### \textit{intCens()}
 
-This convenience function is used as the response of a formula object 
+This convenience function is used as the left-hand side of a formula object 
 for the sole purpose of simplifying the specification of required input variables: 
 entry time, left interval time, right interval time, and vaccination time. 
 This function is not intended to be used as a stand-alone feature.
@@ -95,88 +87,75 @@ where \texttt{entry\_time} is the time when the participant enters the trial;
 \texttt{left\_time} is the last examination time when the test is negative;
 \texttt{right\_time} is the first examination time when the test is positive
 (NA or Inf if the participant is never tested positive during the clinical trial);
-\texttt{vaccination\_time} is the time when vaccination takes place. Note that
-all times must be provided in units of whole days.
+\texttt{vaccination\_time} is the time when vaccination takes place
+(NA or Inf if the participant is not vaccinated during the trial). 
+Note that all times must be provided in units of whole days.
 
 ### \textit{idove()}
 
-This function is the primary tool of \textbf{iDOVE}. The value object returned contains the estimated hazard ratio for each baseline covariate, estimated vaccine efficacy in reducing the attack rate, $VE_a(t)$, and in reducing the hazard rate, $VE_h(t)$, where $t$ is time elapsed since vaccination, as well as the estimated vaccine efficacy in reducing the attack rates over $m$ successive time periods, $VE_a(0,t_1), VE_a(t_1,t_2), \ldots, VE_a(t_{m-1},t_m)$. By definition, $VE_a(0,t)=VE_a(t)$.
+This function is the primary tool of \textbf{iDOVE}. The value object returned is an S3 object of class iDOVE that contains the estimated hazard ratio for each baseline covariate, the estimated VE in reducing the attack rate, $VE_a(t)$, and in reducing the hazard rate, $VE_h(t)$, where $t$ is time elapsed since vaccination, as well as the estimated VE in reducing the attack rates over $m$ successive time periods, $VE_a(0,t_1), VE_a(t_1,t_2), \ldots, VE_a(t_{m-1},t_m)$. By definition, $VE_a(0,t)=VE_a(t)$.
 
 \vspace{.15in}
 
 
 The function call takes the following form:
 
-```{r eval=FALSE}
-idove(formula, data, constantVE = FALSE, rightCens = FALSE, plots = TRUE, 
+```{r usage, eval=FALSE}
+idove(formula, data, constantVE = FALSE, plots = TRUE, 
       changePts = NULL, timePts = NULL, tol = 0.0001, maxit = 2000)
 ```
 where 
 \begin{itemize}
 \item \texttt{formula} is a model statement. See below for further details. 
-\item \texttt{data} is the data.frame object containing all required data
+\item \texttt{data} is a data.frame object containing all required data
 as previously described.
-\item \texttt{constantVE} is a logical object. If TRUE, the vaccine efficacy 
-is assumed to be constant in the period after the last change point. If
-FALSE, the VE is assumed to be potentially waning after the last change point.
-\item \texttt{rightCens} is a logical object. If TRUE, the standard Cox regression for 
-right-censored infection time data is used estimate the vaccine efficacy. If FALSE,
-the nonparametric maximum likelihood method for interval-censored infection time data is used.
-\item \texttt{plots} is a logical object indicating whether graphical forms of the estimated
-vaccine efficacy in reducing the attack rate, $VE_a(t)$, and
-in reducing the hazard rate, $VE_h(t)$, are to be generated.
-\item \texttt{changePts} is an optional integer vector to specify the change points $(x_1, \dots, x_{K-1})$ of the piece-wise log-linear hazard ratio. If no change points are provided,
-one change point will automatically be selected among Weeks 4, 5, 6, 7, 8 by AIC.
-\item \texttt{timePts} is an optional vector to specify the time points $(t_1, t_2, \ldots, t_m)$ 
-for partitioning the study period in the estimation of the attack rates over successive time periods. If not provided, 
+\item \texttt{constantVE} is a logical object specifying the VE trend after the last change point. If TRUE, VE is assumed to be constant after the last change point;
+otherwise, VE is allowed to vary after the last change point.
+\item \texttt{plots} is a logical object indicating whether graphical forms of the estimated $VE_a(t)$ and $VE_h(t)$ curves are to be generated.
+\item \texttt{changePts} is an optional integer vector to specify the change points for the vaccine effect on the hazard ratio. If no change points are provided,
+one change point will automatically be selected among Weeks 4, 5, 6, 7, 8 
+by the Akaike information criterion (AIC) to capture the ramping vaccine effect after the initial shot.
+\item \texttt{timePts} is an optional integer vector to specify the time points $(t_1, t_2, \ldots, t_m)$ 
+for partitioning the study period in the estimation of VE on the attack rates over successive time periods. If not provided, 
 a default sequence $t_1, 2t_1, 3t_1, \dots $ will be used, where
 $t_1$ is the first change point. The sequence ends at the  
 maximum of the finite left and right interval times from all participants. 
-\item \texttt{tol} is the convergence threshold for the EM or Newton-Raphson algorithm. 
-\item \texttt{maxit} is the maximum number of iterations 
-for the EM or Newton-Raphson algorithm. 
+\item \texttt{tol} is the convergence threshold for the EM algorithm. 
+\item \texttt{maxit} is the maximum number of iterations for the EM algorithm. 
 \end{itemize}
 
 \vspace{.15in}
 
 
-The model statement is a formula object. The left-hand-side is an
+The model statement is a formula object. The left side is an
 object returned by the \textit{intCens()} function and specifies all
-time variables. The right-hand-side contains all baseline covariates;
-a model without baseline covariates is allowed. Note that categorical baseline 
-covariates can be specified, and if provided, 
-all other categories are compared to the first category.
+time variables. The right side contains all baseline covariates;
+a model without baseline covariates is allowed. Categorical baseline 
+covariates can be specified, and all other categories are compared to the first category.
 
 The \texttt{formula} input takes the following general structure
 
-```{r eval=FALSE}
+```{r intCens-usage, eval=FALSE}
 intCens(entry_time, left_time, right_time, vaccination_time) ~ covariates 
 ```
 
 where 'event\_time', 'left\_time', 'right\_time', 'vaccination\_time', and 'covariates'
-are used here as place holders
-indicating the data that are to be provided; they are to be replaced by the 
+are place holders
+indicating the data that are to be provided; they should be replaced by the 
 appropriate variable names in the header of the input data.
 
 \vspace{.15in}
 
-When \texttt{right\_time} - \texttt{left\_time} $\le$ 2 for all individuals whose infection times are truly interval-censored (i.e., \texttt{right\_time} is finite), the software assumes that the examinations are completed daily or every two days, and performs the standard Cox regression, regardless of the value provided through input \texttt{rightCens}. In general, we suggest placing change points at times (since vaccination) when there are sufficient probabilities of events. Also, we suggest not placing change points at the tail, otherwise the estimation on final pieces might be unstable. The two measures of vaccine efficacy, $VE_a(t)$ and $VE_h(t)$, are estimated up to the maximum of all finite left and right ends of the intervals. However, the estimates at the tail may not be reliable because there are very few participants under follow-up. To obtain reliable estimates of $VE_a$ $(t_{j-1}, t_j)$ $(j=1,\ldots, m)$, we suggest using broad time periods, such as every month or every two months.
-
-The value object returned by \textit{idove()} is an S3 object of class iDOVE
-that has additional attributes that are used by package convenience functions:
-\begin{itemize}
-\item \textbf{knots}: The knots of the linear spline.
-\item \textbf{tau}: The length of the trial in days.
-\item \textbf{gamma}: The estimated spline parameters.
-\item \textbf{covgamma}: The covariance matrix of the spline parameters.
-\end{itemize}
+The two VE measures, $VE_a(t)$ and $VE_h(t)$, are estimated up to the maximum of all finite left and right ends of the time intervals.
+To ensure stable estimates, we suggest placing change points at times (since vaccination) when there are relatively large numbers of events
+and not placing change points at the right tail. 
 
 \vspace{.15in}
 
 
 ### \textit{plot()}
 
-When provided the value object returned by \textit{idove()}, this convenience function creates/recreates plots of the estimated vaccine efficacy in reducing the attack rate, $VE_a(t)$, and in reducing the hazard rate, $VE_h(t)$.
+When provided the value object returned by \textit{idove()}, this convenience function creates/recreates plots of the estimated VE curves in reducing the attack rate, $VE_a(t)$, and in reducing the hazard rate, $VE_h(t)$.
 
 ### \textit{print()}
 
@@ -187,40 +166,40 @@ When provided the value object returned by \textit{idove()}, the tabular results
 To illustrate the call structure and results of \textit{idove()}, we use the 
 dataset provided with the package, idoveData. 
 This dataset was simulated under a blinded, priority-tier dependent crossover 
-design and contains the following observations for each of the 40,000 participants:
+design with a ramping vaccine effect between dose 1 and dose 2 and contains the following observations for each of the 40,000 participants:
 
 \begin{itemize}
-\item \textbf{entry.time}: The entry time in days
-\item \textbf{left.time}: The left end of the time interval in days
-\item \textbf{right.time}: The right end of the time interval in days
-\item \textbf{vaccine.time}: The time of vaccination in days
-\item \textbf{priority}: A composite baseline risk score taking values 1-5
-\item \textbf{sex}: A binary indicator of sex (male/female)
+\item \textbf{entry.time}: The entry time in days.
+\item \textbf{left.time}: The left end of the time interval in days.
+\item \textbf{right.time}: The right end of the time interval in days.
+\item \textbf{vaccine.time}: The time of vaccination in days.
+\item \textbf{priority}: A composite baseline risk score taking values 1-5.
+\item \textbf{sex}: A binary indicator of sex (male/female).
 \end{itemize}
 
 \vspace{.15in}
   
     
 The data can be loaded in the usual way
-```{r}
+```{r data-load}
 data(idoveData)
 ```
 
-```{r}
+```{r data-head}
 head(idoveData)
 ```
 
 \vspace{.15in}
 
 Consider the summary statistics
-```{r}
+```{r data-summary}
 summary(idoveData)
 summary(idoveData$right.time[is.finite(idoveData$right.time)])
 ```
 We can see that participants were enrolled in the study over a 4-month period 
-(0 $\le$ entry.time $\le 120$ days); that the follow-up time ended on day 315 
-(left.time and finite right.time $\le$ 315 days); 
-and that more than $75\%$ of the participants were never tested positive during 
+(0 $\le$ entry.time $\le 120$ days), the follow-up time ended on day 315 
+(left.time and finite right.time $\le$ 315 days),
+and more than $75\%$ of the participants were never tested positive during 
 the follow-up (right.time = Inf indicates that a participant did not
 test positive during the course of the trial). 
 In addition, the priority (risk) score is evenly distributed 
@@ -232,15 +211,31 @@ covariates, priority and sex.
 \vspace{.25in}
 
 
-In the first example, we set Week 4 as the change point and assume a potentially waning vaccine efficacy after 4 weeks. We want to estimate $VE_a$ over 0-4, 4-16, 16-28, 28-40 weeks. Note that all times must be provided in the unit of integer days. The function call takes the following form
+In the first example, we set Week 4 as the change point and assume a potentially waning VE after 4 weeks. We want to estimate $VE_a$ over 0-4, 4-16, 16-28, 28-40 weeks. Note that all times must be provided in the unit of integer days. The function call takes the following form
 
-```{r fig.align='center', fig.cap='\\label{fig:idoveFigs}Plots auto-generated by \\textit{idove()}. On the left, the estimated curve of vaccine efficacy in reducing the attack rate, $VE_a(t)$ (black) and its $95\\%$ confidence intervals (green) are shown as a function of the time since vaccination. On the right, the estimated curve of vaccine efficacy in reducing the hazard rate, $VE_h(t)$ (black) and its $95\\%$ confidence intervals (green) are shown as a function of the time since vaccination.', echo=TRUE}
+```{r idove-noaic, fig.show='hide', echo=TRUE, eval=FALSE}
 model <- intCens(entry.time, left.time, right.time, vaccine.time) ~ priority + sex
 result1 <- idove(formula = model, 
                  data = idoveData,
                  changePts = 4*7,
                  timePts = c(4, 16, 28, 40)*7)
 ```
+```{r idove-noaic-read, echo = FALSE, eval = TRUE}
+result1 <- readRDS(file="result1.rds")
+```
+\begin{verbatim}
+## changePts: {28}
+## performing nonparametric maximum likelihood
+## Iteration 100 : difference = 0.000140 
+## EM algorithm converged after 118 iterations 
+## Number of subjects: 40000
+## Number of unique time points: 313
+## Log-likelihood at final estimates: -10880.11
+## PL converged after 2 iterations 
+## PL converged after 2 iterations 
+## PL converged after 2 iterations 
+## PL converged after 2 iterations 
+\end{verbatim}
 
 \vspace{.15in}
 
@@ -250,8 +245,16 @@ The function returns an S3 object of class iDOVE, which contains a list object w
 
 \noindent \textbf{call}: The unevaluated call.
 
-```{r}
+```{r idove-noaic-return-call}
 result1$call
+```
+
+\vspace{.15in}
+
+\noindent \textbf{changePts}: The changePts of the analysis.
+
+```{r idove-noaic-return-changePts}
+result1$changePts
 ```
 
 \vspace{.15in}
@@ -260,7 +263,7 @@ result1$call
 together with the estimated standard error, the $95\%$ confidence 
 interval, and the two-sided p-value for testing no covariate effect. 
       
-```{r}
+```{r idove-noaic-return-covariates}
 result1$covariates
 ```
 
@@ -270,25 +273,24 @@ When no baseline covariates are provided, this element will be NA.
  
 
       
-\noindent \textbf{Vaccine Efficacy}: Element \textbf{\$VE\_a} contains the 
-estimated vaccine efficacy in reducing 
-the attack rate at the endpoint of each time interval, together 
-with its standard error and the $95\%$ confidence interval. 
-Element \textbf{\$VE\_h} contains the 
-estimated vaccine efficacy in reducing 
-the hazard rate at the endpoint of each time interval, together 
-with its standard error and the $95\%$ confidence interval. 
+\noindent \textbf{Vaccine Efficacy}: Element \textbf{\$VE\_a} contains 
+the daily VE estimate in reducing the attack rate, 
+together with its standard error and the $95\%$ confidence interval. 
+Element \textbf{\$VE\_h} contains the daily VE estimate in reducing 
+the hazard rate, together with its standard error and the $95\%$ confidence interval. 
       
-```{r}
-result1$vaccine$VE_a
-result1$vaccine$VE_h
+```{r idove-noaic-return-VE}
+head(result1$vaccine$VE_a)
+tail(result1$vaccine$VE_a)
+head(result1$vaccine$VE_h)
+tail(result1$vaccine$VE_h)
 ```
 
-Element \textbf{\$VE\_period} contains the estimated vaccine efficacy in 
+Element \textbf{\$VE\_period} contains the estimated VE in 
 reducing the attack rate over each time period, 
 its standard error, and the $95\%$ confidence interval.
     
-```{r}
+```{r idove-naic-return-interval}
 result1$vaccine$VE_period
 ```
 
@@ -297,27 +299,59 @@ result1$vaccine$VE_period
 
 
 The graphical depictions of $VE_a$ and $VE_h$ estimates are 
-generated by default by \textit{idove()} and are shown in Figure \ref{fig:idoveFigs}. This figure can be regenerated using \textit{plot()} as follows:
+generated by default by \textit{idove()} and are shown in Figure \ref{fig:idoveFigs}. 
+This figure can be regenerated using \textit{plot()} as follows:
 
-```{r fig.show='hide', eval=FALSE}
+```{r idove-noaic-plot, eval=FALSE}
 plot(x = result1)
 ```
+
+```{r idove-noaic-show-plot, echo=FALSE, out.width='49%',fig.cap='\\label{fig:idoveFigs}Plots auto-generated by \\textit{idove()}. On the left, the estimated $VE_a(t)$ curve (black) and its $95\\%$ confidence intervals (green) are shown as a function of the time since vaccination. On the right, the estimated $VE_h(t)$ curve (black) and its $95\\%$ confidence intervals (green) are shown as a function of the time since vaccination.' , fig.show='hold', fig.align='center'}
+knitr::include_graphics(
+  path=c("idove1a.pdf","idove1b.pdf"),
+  auto_pdf = getOption("knitr.graphics.auto_pdf", FALSE),
+  dpi = NULL,
+  error = getOption("knitr.graphics.error", TRUE)
+)
+```
+
+
 
 \vspace{.15in}
 
 In the second example, we have the software use AIC to choose a change point among Weeks 4, 5, 6, 7, 8. 
-We assume a constant vaccine efficacy after the change point and thus only the constant vaccine efficacy is estimated. The function call takes the following form
+We assume a constant VE after the change point, and thus only the constant VE is estimated. The function call takes the following form
 
-```{r}
-result2 <- idove(formula = model, 
-                 data = idoveData,
-                 constantVE = TRUE)
+```{r idove-constantVE, echo=TRUE, eval=FALSE}
+result2 <- idove(formula = model, data = idoveData, constantVE = TRUE)
 ```
-
-
+```{r idove-constantVE-read, echo = FALSE, eval = TRUE}
+result2 <- readRDS(file="result2.rds")
+```
+\begin{verbatim}
+## constantVE selected
+## changePts not given; using AIC to select from {28,35,42,49,56}
+## performing nonparametric maximum likelihood
+## evaluating change point: 28
+## EM algorithm converged after 28 iterations
+## evaluating change point: 35
+## EM algorithm converged after 29 iterations
+## evaluating change point: 42
+## EM algorithm converged after 29 iterations
+## evaluating change point: 49
+## EM algorithm converged after 30 iterations
+## evaluating change point: 56
+## EM algorithm converged after 29 iterations
+## Day 28 (week 4) was selected as the change point by AIC
+## Number of subjects: 40000
+## Number of unique time points: 313
+## Partial log-likelihood at final estimates: -10909.76
+## PL converged after 2 iterations
+## PL converged after 2 iterations
+## PL converged after 1 iterations
+\end{verbatim}
 
 \vspace{.15in}
-
 
 The function returns a list object containing the following items. 
 
@@ -327,7 +361,7 @@ The function returns a list object containing the following items.
 together with the estimated standard error, the $95\%$ confidence 
 interval, and the two-sided p-value for testing no covariate effect.
       
-```{r}
+```{r idove-constantVE-return-covariates}
 result2$covariates
 ```
 
@@ -336,11 +370,11 @@ result2$covariates
 
       
 \noindent \textbf{Vaccine Efficacy}: Element \textbf{\$VE} contains the 
-estimated constant vaccine efficacy, together 
+estimated constant VE, together 
 with its standard error and the $95\%$ confidence interval. 
 
       
-```{r}
+```{r idove-aic-return-VE}
 result2$vaccine$VE
 ```
 
@@ -348,4 +382,5 @@ result2$vaccine$VE
 \noindent \textbf{References}
 
 Lin, D-Y, Gu, Y., Zeng, D., Janes, H. E., and Gilbert, P. B. (2021). 
-Evaluating Vaccine Efficacy Against SARS-CoV-2 Infection. Submitted.
+Evaluating vaccine efficacy against SARS-CoV-2 infection.
+Clinical Infectious Diseases, ciab630, https://doi.org/10.1093/cid/ciab630
